added more appropriate comments and wrote the deck-related methods using the new method of the deck class; rewrote updatePathPosition method in playerdashboard and a little change to advancetoken;