@@ -12,16 +12,16 @@ public class Shop {
         return shopGrid[row][column].getFirst();
     }
 
-    public Deck[][] getGrid(){
-        return shopGrid;
-    }
+    public Deck[][] getGrid(){ return shopGrid; }
 
+    // BUY A SELECTED CARD FROM SHOP, RETURN THE CARD TO THE CALLER AND DELETE IT FROM THE GRID;
     public DevelopmentCard buy(int row, int column){ //the controller check if the player can buy the card before;
         DevelopmentCard bought = shopGrid[row][column].getFirst();
-        shopGrid[row][column].getDeck().remove(0);
+        shopGrid[row][column].removeFirst();
         return bought;
     }
 
+    //METHOD TO DISCARD 2 CARD FROM THE POOL OF CARD OF THAT COLOUR BECAUSE OF THE SOLOTOKEN;
     public void discardFromToken(CardColour colour){
         int column = colour.getColumn();
         ArrayList<DevelopmentCard> deck;
@@ -29,7 +29,7 @@ public class Shop {
         while(toDelete > 0){
             deck = shopGrid[i][column].getDeck();
             while(deck.size() != 0 && toDelete > 0){
-                deck.remove(0);
+                shopGrid[i][column].removeFirst();
                 toDelete--;
             }
             i--;
